--- a/packages/learn-pack/pack1/package.json
+++ b/packages/learn-pack/pack1/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@npmpack/pack1",
-  "version": "1.0.0",
+  "name": "@xulei131401/learn-pack-pack1",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
