--- a/packages/learn-pack/pack3/package.json
+++ b/packages/learn-pack/pack3/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@npmpack/pack3",
-  "version": "1.0.0",
+  "name": "@xulei131401/learn-pack-pack3",
+  "version": "0.0.1",
   "description": "",
-  "type":"module",
+  "type": "module",
   "scripts": {},
   "keywords": [],
   "author": "",
