--- a/packages/learn-pack/pack4/package.json
+++ b/packages/learn-pack/pack4/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "@npmpack/pack4",
-  "version": "1.0.0",
+  "name": "@xulei131401/learn-pack-pack4",
+  "version": "0.0.1",
   "description": "",
   "main": "./src/cjs/index.cjs",
   "exports": {
     ".": {
-     "import": "./src/ems/index.mjs",
-     "require": "./src/cjs/index.cjs"
+      "import": "./src/ems/index.mjs",
+      "require": "./src/cjs/index.cjs"
     },
     "./a": {
-        "import": "./src/ems/a.mjs",
-        "require": "./src/cjs/a.cjs"
-     }
-    },
-  "scripts": {
+      "import": "./src/ems/a.mjs",
+      "require": "./src/cjs/a.cjs"
+    }
   },
+  "scripts": {},
   "keywords": [],
   "author": "",
   "license": "ISC"
