--- a/packages/learn-vue-ts/package.json
+++ b/packages/learn-vue-ts/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learn-vue-ts",
+  "name": "@xulei131401/learn-vue-ts",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
