--- a/packages/learn-js/package.json
+++ b/packages/learn-js/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "npmpack",
-  "version": "1.0.0",
+  "name": "@xulei131401/learn-js",
+  "version": "0.0.1",
+  "private":"true",
   "description": "",
-  "private": true,
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
