--- a/packages/learn-pack/app/package.json
+++ b/packages/learn-pack/app/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@npmpack/app",
+  "name": "@xulei131401/learn-pack-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
