--- a/packages/learn-third-part/package.json
+++ b/packages/learn-third-part/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "front-practice",
+  "name": "@xulei131401/learn-third-part",
   "version": "0.0.1",
-  "private": true,
+  "private":"true",
   "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
