--- a/packages/learn-pack/app/package.json
+++ b/packages/learn-pack/app/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@npmpack/pack2": "workspace:^",
+    "@xulei131401/learn-pack-pack2": "workspace:^",
     "vue": "^3.2.47"
   },
   "devDependencies": {
