--- a/packages/learn-pack/pack3/package.json
+++ b/packages/learn-pack/pack3/package.json
@@ -8,6 +8,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@npmpack/pack2": "workspace:^"
+    "@xulei131401/learn-pack-pack2": "workspace:^"
   }
 }
