--- a/packages/learn-js/guide/package.json
+++ b/packages/learn-js/guide/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rimraf ./out",
     "server": "serve .",
-    "dev": "pnpm run clean && \"pnpm run server\""
+    "dev": "pnpm run server"
   },
   "keywords": [],
   "author": "",
