--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-practice",
+  "name": "@xulei131401/front-guide",
   "version": "0.0.1",
   "private": true,
   "description": "",
